--- a/MissionEditor/data/FinalAlert2/FALanguage.ini
+++ b/MissionEditor/data/FinalAlert2/FALanguage.ini
@@ -1294,6 +1294,18 @@ BasicAddOnNeeded=附加数据:
 AutoLevelerDlgDesc=该功能会自动抬高被悬崖地块包围的平地。\n地图尺寸如果不小的话耗时会达到几秒。\n操作结束之后请查看地形修改结果是否符合预期，如果效果不好可以撤销，或者试试其它功能，比如平整地块来微调修整。
 Auto Leveler=自动抬升地块    
 
+IniEditorCaption=Ini编辑器
+IniEditorDesc=最好别用这个功能，问题很多。
+IniEditorSections=条目:
+IniEditorAdd=添加
+IniEditorDelete=删除
+IniEditorInsert=从外部Ini文件导入
+IniEditorSectionContent=条目内容
+IniEditorSectionKeys=字段:
+IniEditorSectionValue=值:
+IniEditorAddKey=添加
+IniEditorDeleteKey=删除
+
 ; mapinfo dialog
 Map Properties=地图属性
 MapDesc=通用地图属性:
