user script confirmation dialog translated .

--- a/MissionEditor/data/FinalAlert2/FALanguage.ini
+++ b/MissionEditor/data/FinalAlert2/FALanguage.ini
@@ -1589,7 +1589,7 @@ UserScriptsDlgAvailable=可用脚本:
 UserScriptsDlgReport=结果报告:
 UserScriptsDlgOK=运行
 UserScriptsDlgCancel=退出
-
+Continue?=执行确认   
 
 ; team types
 TeamTypesCaption=小队选项
