--- a/MissionEditor/data/FinalAlert2/FALanguage.ini
+++ b/MissionEditor/data/FinalAlert2/FALanguage.ini
@@ -489,6 +489,7 @@ Cancel=Cancel
 None=None
 Yes=Yes
 No=No
+Error=Error
 
 ; YRM
 NeedsYR=This map will need Yuri''s Revenge to be played.
@@ -677,6 +678,11 @@ HouseDuplicatedCreatingTip=There are already houses in your map. You need to del
 HouseDuplicatedCreatingCaption=Standard players creation failure
 HouseNoneExistense=No houses do exist, if you want to use houses, you should use "Prepare houses" before doing anything else.
 HouseNoneExistenseCap=House not found
+
+IniEditorItemUnselected=You cannot delete a section without choosing one.
+IniEditorSelectionDeletePrefix=Are you sure you want to delete "
+IniEditorSelectionDeleteSUffix="? You should be really careful, you may not be able to use the map afterwards.
+IniEditorDeleteSelectionCap=Delete section
 
 ; loading dialog
 LoadLoadRules=Loading rules
@@ -1081,6 +1087,7 @@ Cancel=取消
 None=无
 Yes=是
 No=否
+Error=错误  
 
 ; YRM
 NeedsYR=要用此地图进行游戏，需要尤里的复仇。
@@ -1307,6 +1314,10 @@ IniEditorSectionKeys=字段:
 IniEditorSectionValue=值:
 IniEditorAddKey=添加
 IniEditorDeleteKey=删除
+IniEditorItemUnselected=您必须选中一个条目才能删除！
+IniEditorSelectionDeletePrefix=确定要删除 "
+IniEditorSelectionDeleteSUffix="吗? 误删除可能会彻底破坏地图数据！
+IniEditorDeleteSelectionCap=删除条目
 
 ; mapinfo dialog
 Map Properties=地图属性
@@ -1590,6 +1601,8 @@ UserScriptsDlgReport=结果报告:
 UserScriptsDlgOK=运行
 UserScriptsDlgCancel=退出
 Continue?=执行确认   
+
+
 
 ; team types
 TeamTypesCaption=小队选项
