Ini add key translated .

--- a/MissionEditor/MissionEditor.rc
+++ b/MissionEditor/MissionEditor.rc
@@ -412,15 +412,15 @@ BEGIN
     LTEXT           "Height:",IDC_MAP_D_HEIGHT,107,56,93,9
 END
 
-IDD_INPUTBOX DIALOG 0, 0, 214, 70
+IDD_INPUTBOX DIALOGEX 0, 0, 289, 62
 STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Dialog"
-FONT 8, "Tahoma"
+FONT 8, "Tahoma", 0, 0, 0x0
 BEGIN
-    DEFPUSHBUTTON   "OK",IDOK,160,5,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,160,25,50,14
-    LTEXT           "Static",IDC_SENTENCE,5,5,150,35
-    EDITTEXT        IDC_VAL,5,50,205,12,ES_AUTOHSCROLL
+    DEFPUSHBUTTON   "OK",IDOK,235,4,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,235,20,50,14
+    LTEXT           "Static",IDC_SENTENCE,5,5,228,33
+    EDITTEXT        IDC_VAL,2,46,280,12,ES_AUTOHSCROLL
 END
 
 IDD_IMPORTINI DIALOG 0, 0, 229, 150
@@ -1782,6 +1782,8 @@ BEGIN
 
     IDD_INPUTBOX, DIALOG
     BEGIN
+        RIGHTMARGIN, 285
+        BOTTOMMARGIN, 60
     END
 
     IDD_IMPORTINI, DIALOG
@@ -3620,6 +3622,11 @@ BEGIN
 END
 
 IDD_ALL AFX_DIALOG_LAYOUT
+BEGIN
+    0
+END
+
+IDD_INPUTBOX AFX_DIALOG_LAYOUT
 BEGIN
     0
 END
