--- a/MissionEditor/data/FinalAlert2/FALanguage.ini
+++ b/MissionEditor/data/FinalAlert2/FALanguage.ini
@@ -683,6 +683,8 @@ IniEditorItemUnselected=You cannot delete a section without choosing one.
 IniEditorSelectionDeletePrefix=Are you sure you want to delete "
 IniEditorSelectionDeleteSUffix="? You should be really careful, you may not be able to use the map afterwards.
 IniEditorDeleteSelectionCap=Delete section
+IniEditorAddKeyDesc=Please set the name and value for the current key here: (for example, setting a new key "Strength" with the value 200 can be written as "Strength=200". You don´t need to specify a value.)
+IniEditorAddKeyCap=Create key
 
 ; loading dialog
 LoadLoadRules=Loading rules
@@ -1318,6 +1320,8 @@ IniEditorItemUnselected=您必须选中一个条目才能删除！
 IniEditorSelectionDeletePrefix=确定要删除 "
 IniEditorSelectionDeleteSUffix="吗? 误删除可能会彻底破坏地图数据！
 IniEditorDeleteSelectionCap=删除条目
+IniEditorAddKeyDesc=字段的名称和值必须同时提供，例如 Strength=200 
+IniEditorAddKeyCap=添加字段
 
 ; mapinfo dialog
 Map Properties=地图属性
